# ChangeLog for dev-java/openjdk
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  26 May 2007; Petteri Räty <betelgeuse@gentoo.org>
  openjdk-1.7.0.0_alpha13.ebuild:
  My cleanup dropped external-libpng patch so it wasn't compiling.

  26 May 2007; Petteri Räty <betelgeuse@gentoo.org>
  openjdk-1.7.0.0_alpha13.ebuild:
  Revert user CFLAGS/CXXFLAGS pach as it makes the ebuild segmentation fault.

  26 May 2007; Petteri Räty <betelgeuse@gentoo.org>
  openjdk-1.7.0.0_alpha13.ebuild:
  Change sun-bcla to sun-prerelease-jdk7 as that's where we take our binary plug.

  26 May 2007; Petteri Räty <betelgeuse@gentoo.org>
  +openjdk-1.7.0.0_alpha13.ebuild, +files/gettimeofday-declaration.patch:
  Version bump.

  25 May 2007; Petteri Räty <betelgeuse@gentoo.org>
  openjdk-1.7.0.0_alpha12-r1.ebuild:
  Bring in matching version of sun-jdk so the the binary parts stay in sync.

  24 May 2007; Petteri Räty <betelgeuse@gentoo.org>
  -openjdk-1.7.0.0_alpha12.ebuild, +openjdk-1.7.0.0_alpha12-r1.ebuild:
  Revision bump to push out accumulated fixes.

  24 May 2007; Petteri Räty <betelgeuse@gentoo.org>
  openjdk-1.7.0.0_alpha12.ebuild, +files/noundef.patch:
  Link dynamically against libstdc++.

  22 May 2007; Petteri Räty <betelgeuse@gentoo.org>
  openjdk-1.7.0.0_alpha12.ebuild:
  Fix permission issue. For some reason for some people OpenJDK is getting
  build with permission mask 600.

  21 May 2007; Petteri Räty <betelgeuse@gentoo.org>
  openjdk-1.7.0.0_alpha12.ebuild:
  Add DEPEND on app-arch/unzip  and app-arch/zip.

  20 May 2007; Petteri Räty <betelgeuse@gentoo.org>
  openjdk-1.7.0.0_alpha12.ebuild, +files/external-giflib.patch,
  +files/external-jpeg-splash.patch, +files/external-libpng.patch:
  Use the system installed copy of libpng instead of the bundled one.

  15 May 2007; Petteri Räty <betelgeuse@gentoo.org>
  openjdk-1.7.0.0_alpha12.ebuild:
  Remove the need for dev-java/ant by running make directly.
