@@ -4,6 +4,10 @@
 
   26 May 2007; Petteri Räty <betelgeuse@gentoo.org>
   openjdk-1.7.0.0_alpha13.ebuild:
+  The permission fix wasn't matching jvm.cfg.
+
+  26 May 2007; Petteri Räty <betelgeuse@gentoo.org>
+  openjdk-1.7.0.0_alpha13.ebuild:
   My cleanup dropped external-libpng patch so it wasn't compiling.
 
   26 May 2007; Petteri Räty <betelgeuse@gentoo.org>
